[package]
name = "ip-rs"
version = "0.2.2"
authors = ["Heitor de Bittencourt <heitorpbittencourt@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A simple web service to find out your public IP address"
readme = "README.md"
homepage = "https://heitorpb.github.io/bla/ip.rs"
repository = "https://github.com/heitorPB/ip.rs"
keyworks = ["ip", "networking"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
